# GEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
GEngine/: CMakeLists.txt
GEngine/src/: App.cc  App.hh  CMakeLists.txt  GE.hh  Logger.cc  Logger.hh  Time.hh  common.hh  geMain.hh
GEngine/src/events/: AppEvent.hh  Event.hh  KeyEvent.hh  MouseEvent.hh
GEngine/src/graphics/: Buffers.cc  Buffers.hh  CameraControllers.cc  Cameras.hh  GraphicsContext.hh  RenderCommand.cc  RenderCommand.hh  Renderer.cc  Renderer.hh  RendererAPI.hh  Shader.cc  Shader.hh  Texture.cc  VertexArray.cc  VertexArray.hh  Window.cc  Window.hh
GEngine/src/graphics/Common/: Buffers.cc  Buffers.hh  CameraControllers.hh  Cameras.cc  Cameras.hh  RenderCommand.cc  RenderCommand.hh  Renderer.cc  Renderer.hh  Renderer2D.cc  Renderer2D.hh  RendererAPI.cc  RendererAPI.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh  UniformBuffer.hh  VertexArray.cc  VertexArray.hh
GEngine/src/graphics/GL/: GLBuffers.cc  GLBuffers.hh  GLContext.cc  GLContext.hh  GLFrameBuffer.cc  GLFrameBuffer.hh  GLRendererAPI.cc  GLRendererAPI.hh  GLShader.cc  GLShader.hh  GLTexture.cc  GLTexture.hh  GLVertexArray.cc  GLVertexArray.hh  Shader.cc  Shader.hh
GEngine/src/graphics/Renderer/: FrameBuffer.cc  FrameBuffer.hh  RenderCommand.hh  Renderer.hh  Renderer2D.cc  Renderer2D.hh  RendererAPI.hh
GEngine/src/layers/: Layer.cc  Layer.hh  LayerStack.cc  LayerStack.hh
GEngine/src/layers/ImGui/: ImGuiCore.cc  ImGuiLayer.cc  ImGuiLayer.hh  ImGuiOpenglRenderer.cpp  ImGuiOpenglRenderer.h
GEngine/src/utils/: FileIO.cc  FileIO.hh  Instrumentor.hh  Logger.cc  Logger.hh
GEngine/src/window/: Input.cc  Input.hh  KeyCode.hh  Window.cc  Window.hh
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/graphics/: CMakeLists.txt  IndexBuffer.cc  IndexBuffer.hh  Renderable2D.hh  Renderer2D.hh  Shader.cc  Shader.hh  Simple2DRenderer.cc  Simple2DRenderer.hh  VertexArray.cc  VertexArray.hh  VertexBuffer.cc  VertexBuffer.hh  Window.cc  Window.hh
src/math/: CMakeLists.txt  Mat4.hh  Vec2.hh  Vec3.hh  Vec4.hh  geMath.hh
src/utils/: CMakeLists.txt  utils.hh
testApp/: CMakeLists.txt  imgui.ini
testApp/assets/: fragment.glsl  texShader.vert  vertex.glsl
testApp/assets/Shaders/: texShader.frag
testApp/src/: main.cc
testApp2D/: CMakeLists.txt  imgui.ini
testApp2D/assets/Shaders/: QuadShader.frag  QuadShader.vert  default.vert  texShader.frag
testApp2D/src/: ParticleSystem.hh  TestLayer.cc  TestLayer.hh  main.cc
testApp3D/: CMakeLists.txt
testApp3D/assets/Shaders/: Shader.frag  Shader.vert
testApp3D/src/: TestLayer.cc  TestLayer.hh  main.cc
test_app/: CMakeLists.txt
test_app/assets/: fragment.glsl  vertex.glsl
test_app/src/: main.cc
